# strana_bot

./: .gitignore  Dockerfile  README.md  docker-compose-dev2.yml  docker-compose.yml  pyproject.toml
strana_bot/generateAnswer/: Dockerfile  chat.py  fastapiWork.py  graphqlStrana.py  helper.py  postgreWork.py  pyproject.toml  test.py  workGigaChat.py
strana_bot/handlerMessage/: Dockerfile  apiStrana.py  fastapiWork.py  handler.py  postgreWork.py  pyproject.toml  workGS.py  workRedis.py
strana_bot/instagramConnect/: Dockerfile  README.md  config.py  fastapiWork.py  instagramWork.py  instagram_connector.py  pyproject.toml  test2.py  test3.py  test4.py
strana_bot/senderMessage/: Dockerfile  config.py  fastapiWork.py  instagram_connector.py  pyproject.toml  workTelegram.py
strana_bot/senderMessage/templates/: index.html
strana_bot/telegramConnect/: Dockerfile  fastapiWork.py  handlers.py  postgreWork.py  pyproject.toml  translation.py  workTelegram.py
strana_bot/telegramConnect/templates/: index.html
strana_bot/vectorDBwork/: Dockerfile  fastapiWork.py  pyproject.toml
tests/test-base/: chat.py  chromaDBwork.py  handlers.py  helper.py  translation.py  workTelegram.py  Рабочая таблица — Страна Девелопмент.xlsx
