[tool.poetry]
name = "instagram-connect"
version = "0.1.0"
description = "Instagram Business API connector for handling messages"
authors = ["Igor Gerasimov <gerasimov.igor.98@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
aiohttp = "^3.9.5"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.12.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
